sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:46: error: not enough arguments for method deplace: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
  deplace((origBaseTrou, origPosTrou+1)%nbBases);
         ^